--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "windows.h": "c"
+        "windows.h": "c",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp"
     }
 }
